updated file name

--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,7 @@
             crossorigin="anonymous"
         ></script>
         <script
-            src="{% static 'js/scrypt.js' %}">
+            src="{% static 'js/script.js' %}">
         </script>
     </body>
 </html>
