--- a/templates/base.html
+++ b/templates/base.html
@@ -147,5 +147,7 @@
         <script
             src="{% static 'js/script.js' %}">
         </script>
+        {% block extras %}
+        {% endblock %}
     </body>
 </html>
